--- a/mblock/css/style.css
+++ b/mblock/css/style.css
@@ -134,38 +134,39 @@ main {
     margin-top: 75px;
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../images/triangles-1430105.png);
+    background: url(../UnicornGradients/UnicornVectorGradient_1.jpg);
     background-size: cover;
     display: flex;
     align-items: center;
-    color: white;
+    color: black;
 }
 
 main h2{
     font-size: 3rem;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
     font-family: 'Poppins', sans-serif;
 }
 
 main p{
     max-width: 1000px;
-    margin-bottom: 0.5rem;
-    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
     font-family: 'Poppins', sans-serif;
 }
 main button.start{
-    border: 2px solid white;
+    border: none;
     padding: 1rem 3rem;
-    border-radius: 15px;
+    border-radius: 5px;
     margin-top: 3rem;
-    background-color: transparent;
+    background: linear-gradient(90deg,#11998e,#38ef7d);
     color: white;
     font-size: 1rem;
     font-weight: bold;
     cursor: pointer;
 }
 main button:hover.start{
-    background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6));
+    opacity: 0.9;
+    transition: all .2s ease-in-out;
 }
 main button.down {
     background-color: transparent;
@@ -251,6 +252,10 @@ section .board-con .board-inner{
     border-radius: 10px;
     box-shadow: 3px 5px 5px #717171;
 }
+section .board-con .board-inner:hover,
+section .board-con .board-inner:focus{
+    animation: updownboard 1s ease-in-out;
+}
 section .board-con .board-inner:last-child{
     margin-right: 0;
 }
@@ -272,7 +277,7 @@ section .board-con .board-inner .content p{
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 3; /* 라인수 */
+    -webkit-line-clamp: 4; /* 라인수 */
     -webkit-box-orient: vertical;
     word-wrap:break-word; 
     line-height: 1.2em;
@@ -292,6 +297,17 @@ section .more p {
 }
 section .more i{
     font-weight: bold;
+}
+@keyframes updownboard{
+    0%{
+        margin-top: 0;
+    }
+    50%{
+        margin-top: -1rem;
+    }
+    100%{
+        margin-top: 0;
+    }
 }
 
 /* associate */
