--- a/mblock/css/style.css
+++ b/mblock/css/style.css
@@ -171,7 +171,7 @@ main button:hover.start{
 main button.down {
     background-color: transparent;
     border: none;
-    color: white;
+    color: black;
     font-size: 2rem;
     position: absolute;
     bottom: 0;
