--- a/mblock/css/admin_consult_detail.css
+++ b/mblock/css/admin_consult_detail.css
@@ -74,7 +74,7 @@ main .content::after{
 main .left{
     float: left;
     width: 20%;
-    height: calc(100vh - 6rem - 75px);
+    height: 100vh;
     border-right: 1px solid #f5f5f5;
 }
 main .left ul li{
@@ -93,7 +93,7 @@ main .left ul li .list{
     border-radius: 0 15px 15px 0;
     transition: all .2s ease-in-out;
 }
-main .left ul li:nth-child(5) .list{
+main .left ul li:nth-child(4) .list{
     background: linear-gradient(45deg,#11998e,#38ef7d);
     color: white;
 }
@@ -102,42 +102,55 @@ main .left ul li:focus .list{
     background: linear-gradient(45deg,#11998e,#38ef7d);
     color: white;
 }
-main .mid{
-    float: left;
-    width: 60%;
-    height: calc(100vh - 6rem - 75px);
-}
-main .mid .chatArea{
-    position: fixed;
-    bottom: 0;
-    height: 60px;
-    width: 60%;
-    background: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 1rem;
-}
-main .mid .chatArea input{
-    width: 93%;
-    padding: 0.8rem;
-    border: none;
-    outline: none;
-    background-color: #f1f1f1;
-    border-radius: 15px;
-}
-main .mid .chatArea input:focus{
-    border: none;
-}
-main .mid .chatArea i{
-    font-size: 1.4rem;
-    color: #11998e;
-    cursor: pointer;
-}
 main .right{
     float: left;
-    width: 20%;
-    height: calc(100vh - 6rem - 75px);
-    border-left: 1px solid #f5f5f5;
-    background: pink;
+    width: 80%;
+    height: 100vh;
+    padding: 3rem;
+}
+main .right .title{
+    color: rgb(43, 43, 43);
+    margin-bottom: 2.5rem;
+}
+main .right .head{
+    display: flex;
+    border: 1px solid #f5f5f5;
+}
+main .right .head .label{
+    float: left;
+    width: 15%;
+    background-color: #f8f8f8;
+    text-align: center;
+    padding: 1rem 1.5rem;
+    font-size: 0.8rem;
+    font-weight: bold;
+    color: #777777;
+}
+main .right .head .info{
+    float: left;
+    width: 35%;
+    text-align: left;
+    padding: 1rem 1.5rem;
+    font-size: 0.9rem;
+}
+main .right .head .info i{
+    color: #777777;
+    margin-left: 1.5rem;
+    cursor: pointer;
+}
+main .right .counsel{
+    padding: 3rem 1.5rem 5rem 1.5rem;
+}
+main .right .counsel p{
+    margin-top: 2rem;
+}
+main .right button{
+    border: none;
+    border-radius: 5px;
+    padding: 0.8rem 1rem;
+    background: linear-gradient(45deg,#11998e,#38ef7d);
+    color: white;
+    font-size: 0.8rem;
+    float: right;
+    cursor: pointer;
 }
