--- a/mblock/css/admin_chat.css
+++ b/mblock/css/admin_chat.css
@@ -107,6 +107,64 @@ main .mid{
     width: 60%;
     height: calc(100vh - 6rem - 75px);
 }
+main .mid .chatBox{
+    height: calc(100vh - 6rem - 135px);
+    padding: 2rem 1rem;
+    overflow: auto;
+}
+main .mid .chatBox .date{
+    font-size: 0.7rem;
+    color: #aaa;
+    font-weight: bold;
+    letter-spacing: 1.5;
+    width: 100%;
+    text-align: center;
+}
+main .mid .chatBox ul li{
+    display: flex;
+    margin-top: 1rem;
+}
+main .mid .chatBox ul li .profile{
+    width: 30px;
+    height: 30px;
+    margin-right: 1rem;
+}
+main .mid .chatBox ul li .profile img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+main .mid .chatBox ul li .chat{
+    width: 100%;
+}
+main .mid .chatBox ul li .chat .name{
+    font-size: 0.9rem;
+}
+main .mid .chatBox ul li .chat ul li{
+    margin-top: 0.5rem;
+}
+main .mid .chatBox ul li .chat ul li span{
+    background-color: #e5e5e5;
+    padding: 0.5rem 1.5rem;
+    border-radius: 0 10px 10px 10px;
+    max-width: 40%;
+}
+#me ul li{
+    justify-content: right;
+    margin-top: 0.5rem;
+}
+#me ul li span{
+    align-self: flex-end;
+    background-color: #64dd17;
+    color: whitesmoke;
+    padding: 0.5rem 1.5rem;
+    border-radius: 10px 0 10px 10px;
+    max-width: 40%;
+}
+#chat-img img{
+    max-width: 40%;
+    border-radius: 10px;
+}
 main .mid .chatArea{
     position: fixed;
     bottom: 0;
@@ -131,13 +189,36 @@ main .mid .chatArea input:focus{
 }
 main .mid .chatArea i{
     font-size: 1.4rem;
-    color: #11998e;
+    color: #64dd17;
     cursor: pointer;
 }
 main .right{
     float: left;
     width: 20%;
     height: calc(100vh - 6rem - 75px);
-    border-left: 1px solid #f5f5f5;
-    background: pink;
+    border-left: 2px solid #f5f5f5;
+    padding: 2rem;
+    overflow: auto;
+}
+main .right h4{
+    margin-bottom: 2rem;
+    color: #777777;
+}
+main .right ul li{
+    width: 100%;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+main .right ul li .img{
+    width: 45px;
+    height: 45px;
+    margin-right: 1rem;
+    position: relative;
+}
+main .right ul li .img img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
 }
