--- a/mblock/css/admin_announce.css
+++ b/mblock/css/admin_announce.css
@@ -201,3 +201,51 @@ main .right .list ul li .fix{
     color: #555;
     cursor: pointer;
 }
+/* modal */
+main .right .modal{
+    display: none;
+    position: fixed;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+main .right .modal i{
+    cursor: pointer;
+    float: right;
+}
+main .right .modal .modal-content{
+    background-color: white;
+    padding: 2rem 1.5rem 1rem 1.5rem;
+    border-radius: 10px;
+    width: 25%;
+    margin: 25% auto;
+}
+main .right .modal .modal-content strong{
+    margin-top: 2rem;
+}
+main .right .modal .modal-content p{
+    color: #777777;
+    margin-top: 0.4rem;
+    font-size: 0.9rem;
+    font-weight: bold;
+}
+main .right .modal .modal-content .delete{
+    color: darkred;
+    font-weight: bold;
+    font-size: 0.8rem;
+    margin-top: 3.5rem;
+    text-align: center;
+    cursor: pointer;
+    padding: 0.6rem 0;
+    border-radius: 10px;
+    transition: all .2s;
+}
+main .right .modal .modal-content .delete:hover,
+main .right .modal .modal-content .delete:focus{
+    background-color: darkred;
+    color: white;
+}
