--- a/mblock/css/signup.css
+++ b/mblock/css/signup.css
@@ -139,7 +139,7 @@ main .form-group .profile-img img.active{
 main .form-group .profile-img i{
     font-size: 1.6rem;
     margin-bottom: 0.5rem;
-    color: #11998e;
+    color: #38ef7d;
 }
 main button{
     width: 100%;
