--- a/mblock/css/admin_announce_detail.css
+++ b/mblock/css/admin_announce_detail.css
@@ -93,7 +93,7 @@ main .left ul li .list{
     border-radius: 0 15px 15px 0;
     transition: all .2s ease-in-out;
 }
-main .left ul li:nth-child(2) .list{
+main .left ul li:nth-child(1) .list{
     background: linear-gradient(45deg,#11998e,#38ef7d);
     color: white;
 }
@@ -111,95 +111,59 @@ main .right{
 main .right .title{
     color: rgb(43, 43, 43);
 }
-main .right .control{
-    padding: 1rem 0;
-    float: right;
+main .right h4{
+    font-size: 2.5rem;
+    margin: 1.5rem 0;
 }
-main .right .control button{
-    border: 1px solid #e5e5e5;
-    border-radius: 5px;
-    background-color: #f8f8f8;
-    padding: 0.5rem 1.2rem;
-    cursor: pointer;
+main .right .info{
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #e5e5e5;
+    padding: 2rem 0;
+    position: relative;
+}
+main .right .info .img{
+    width: 45px;
+    height: 45px;
+    margin-right: 1rem;
+}
+main .right .info .img img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+main .right .info .info-inner h5{
     font-size: 0.9rem;
-    font-weight: 600;
-    color: #555;
 }
-main .right .label::after{
-    content: "";
-    display: block;
-    clear: both;
-}
-main .right .label{
-    display: flex;
-    margin-top: 4.5rem;
-    font-size: 0.7rem;
-    color: #717171;
-    font-weight: bold;
-    background-color: #f8f8f8;
-    padding: 1.2rem 0;
-    text-align: center;
-}
-main .right .label .check{
-    float: left;
-    width: 5%;
-
-}
-main .right .label .tit{
-    float: left;
-    width: 60%;
-}
-main .right .label .name{
-    float: left;
-    width: 15%;
-}
-main .right .label .date{
-    float: left;
-    width: 15%;
-}
-main .right .label .fix{
-    float: left;
-    width: 5%;
-}
-main .right .list ul li{
-    display: flex;
+main .right .info .info-inner .num{
     font-size: 0.8rem;
-    color: #000;
-    padding: 1.4rem 0;
-    text-align: center;
-    border-bottom: 1px solid #f4f4f4;
+    align-items: center;
+    color: #777777;
 }
-main .right .list ul li .check{
-    float: left;
-    width: 5%;
+main .right .info .control{
+    position: absolute;
+    right: 0;
+    bottom: 0.5rem;
+    font-size: 0.8rem;
+    color: #777777;
 }
-main .right .list ul li .tit{
-    float: left;
-    width: 60%;
+main .right .info .control span{
+    padding: 0 0.3rem;
     cursor: pointer;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    padding: 0 1rem;
 }
-main .right .list ul li .tit:focus,
-main .right .list ul li .tit:hover{
-    text-decoration: underline;
+main .right .content{
+    width: 100%;
+    padding: 1rem;
 }
-main .right .list ul li .name{
-    float: left;
-    width: 15%;
+main .right .content img{
+    width: 100%;
+    max-height: 400px;
 }
-main .right .list ul li .date{
-    float: left;
-    width: 15%;
-}
-main .right .list ul li .fix{
-    float: left;
-    width: 5%;
-    font-size: 0.7rem;
-    color: #555;
-    cursor: pointer;
+main .right .content .content-inner{
+    margin-top: 1.5rem;
+    font-size: 1.1rem;
+    letter-spacing: 1.2;
+    line-height: 1.8;
 }
 /* modal */
 main .right .modal{
