--- a/mblock/css/news.css
+++ b/mblock/css/news.css
@@ -209,6 +209,7 @@ section .board-main .right button{
     border: 2px solid #000;
     border-radius: 5px;
     font-weight: bold;
+    font-size: 0.8rem;
     text-transform: uppercase;
     color: #000;
     transition: all .2s ease-in-out;
