--- a/mblock/css/admin_member.css
+++ b/mblock/css/admin_member.css
@@ -93,7 +93,7 @@ main .left ul li .list{
     border-radius: 0 15px 15px 0;
     transition: all .2s ease-in-out;
 }
-main .left ul li:nth-child(5) .list{
+main .left ul li:nth-child(6) .list{
     background: linear-gradient(45deg,#11998e,#38ef7d);
     color: white;
 }
@@ -110,47 +110,102 @@ main .right{
 }
 main .right .title{
     color: rgb(43, 43, 43);
-    margin-bottom: 2.5rem;
 }
-main .right .head{
+main .right .label::after{
+    content: "";
+    display: block;
+    clear: both;
+}
+main .right .label{
     display: flex;
-    border: 1px solid #f5f5f5;
-}
-main .right .head .label{
-    float: left;
-    width: 15%;
-    background-color: #f8f8f8;
-    text-align: center;
-    padding: 1rem 1.5rem;
-    font-size: 0.8rem;
+    margin-top: 2.5rem;
+    font-size: 0.7rem;
+    color: #717171;
     font-weight: bold;
-    color: #777777;
+    background-color: #f8f8f8;
+    padding: 1.2rem 0;
+    text-align: center;
 }
-main .right .head .info{
+main .right .label .info{
     float: left;
-    width: 35%;
-    text-align: left;
-    padding: 1rem 1.5rem;
-    font-size: 0.9rem;
+    width: 20%;
 }
-main .right .head .info i{
-    color: #777777;
-    margin-left: 1.5rem;
+main .right .label .control{
+    float: left;
+    width: 10%;
+}
+main .right .list ul li{
+    display: flex;
+    font-size: 0.8rem;
+    color: #000;
+    padding: 1.4rem 0;
+    text-align: center;
+    border-bottom: 1px solid #f4f4f4;
+}
+main .right .list ul li .info-name{
+    float: left;
+    width: 20%;
     cursor: pointer;
 }
-main .right .counsel{
-    padding: 3rem 1.5rem 5rem 1.5rem;
+main .right .list ul li .info-name:hover{
+    text-decoration: underline;
 }
-main .right .counsel p{
+main .right .list ul li .info{
+    float: left;
+    width: 20%;
+}
+main .right .list ul li .control{
+    float: left;
+    width: 10%;
+    font-size: 0.7rem;
+    color: #717171;
+    cursor: pointer;
+}
+/* modal */
+main .right .modal{
+    display: none;
+    position: fixed;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+main .right .modal i{
+    cursor: pointer;
+    float: right;
+}
+main .right .modal .modal-content{
+    background-color: white;
+    padding: 2rem 1.5rem 1rem 1.5rem;
+    border-radius: 10px;
+    width: 25%;
+    margin: 25% auto;
+}
+main .right .modal .modal-content strong{
     margin-top: 2rem;
 }
-main .right button{
-    border: none;
-    border-radius: 5px;
-    padding: 0.8rem 1rem;
-    background-color: #38ef7d;
-    color: white;
+main .right .modal .modal-content p{
+    color: #777777;
+    margin-top: 0.4rem;
+    font-size: 0.9rem;
+    font-weight: bold;
+}
+main .right .modal .modal-content .delete{
+    color: darkred;
+    font-weight: bold;
     font-size: 0.8rem;
-    float: right;
+    margin-top: 3.5rem;
+    text-align: center;
     cursor: pointer;
+    padding: 0.6rem 0;
+    border-radius: 10px;
+    transition: all .2s;
+}
+main .right .modal .modal-content .delete:hover,
+main .right .modal .modal-content .delete:focus{
+    background-color: darkred;
+    color: white;
 }
