--- a/mblock/css/invest.css
+++ b/mblock/css/invest.css
@@ -135,9 +135,8 @@ section {
     padding: 5rem 0;
     width: 100%;
     height: 100%;
-    background: url(../images/gradient1.jpg);
+    background: linear-gradient(rgba(255,255,255,0.3),rgba(255,255,255,0.3)) ,url(../images/gradient1.jpg);
     background-size: cover;
-    
 }
 section:nth-child(2n+1){
     background-color: #f8f8f8;
