--- a/mblock/css/admin_member_detail.css
+++ b/mblock/css/admin_member_detail.css
@@ -138,6 +138,9 @@ main .right .profile .info .form-group label{
     font-size: 0.9rem;
     color: #555555;
 }
+main .right .profile .info .form-group p{
+    font-size: 1.1rem;
+}
 main .right .profile .info .form-group input{
     padding: 1rem 0.8rem;
     outline: none;
@@ -175,36 +178,76 @@ main .right .profile .img button{
 }
 main .right .edit{
     padding: 3rem 0;
-}
-main .right .edit .edit-form{
-    margin-top: 2.5rem;
     width: 75%;
-    display: flex;
-    position: relative;
-    align-items: center;
-}
-main .right .edit .edit-form .form-group{
-    margin-bottom: 2.5rem;
-    display: flex;
-    flex-direction: column;
     position: relative;
 }
-main .right .edit .edit-form .form-group label{
-    margin-bottom: 1rem;
-    font-size: 0.9rem;
-    color: #555555;
-}
-main .right .edit .edit-form .form-group input{
-    padding: 1rem 0.8rem;
-    outline: none;
+main .right .select-menu{
+    margin-bottom: 1.25rem;
+    padding: 0.8rem;
     border: 1px solid #ccc;
     border-radius: 5px;
+    font-size: 0.9rem;
+    position: relative;
+    width: 200px;
+    margin-top: 2rem;
 }
-main .right .edit .edit-form .form-group input:focus{
-    border: 1px solid #a7e0a5;
-    box-shadow: 0 0 5px #a7e0a5;
+main .right .select-menu .select-btn{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
 }
-main .right .edit .edit-form button{
+main .right .select-menu .select-btn i{
+    transition: 0.3s;
+}
+main .right .select-menu.active .select-btn i{
+    transform: rotate(-180deg);
+}
+main .right .select-menu .options{
+    z-index: 1;
+    position: absolute;
+    border-radius: 5px;
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 0.8rem;
+    top: 3.5rem;
+    left: 50%;
+    width: 100%;
+    transform: translateX(-50%);
+    opacity: 0;
+    display: none;
+    transition: 0.2s;
+}
+main .right .select-menu.active .options{
+    display: block;
+    opacity: 1;
+}
+main .right .select-menu .options li{
+    padding: 0.5rem;
+    margin: 0.3rem 0;
+    border-radius: 0.5rem;
+    cursor: pointer;
+}
+main .right .select-menu .options li:hover{
+    background: #f4f4f4;
+}
+main .right .edit .withdraw{
+    width: 200px;
+    padding: 0.8rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 0.9rem;
+    color: darkred;
+    background: #f8f8f8;
+    cursor: pointer;
+}
+main .right .edit .withdraw:hover{
+    background: darkred;
+    border: 1px solid darkred;
+    color: white;
+    font-weight: bold;
+}
+main .right .edit button{
     position: absolute;
     right: 0;
     border: none;
